package smartHomeDDD.ddd;

public interface AggregateRoot<ID extends DomainId> extends DomainEntity<ID> {

}