package smartHomeDDD.ddd;

public interface DomainId extends ValueObject {

}
